--- a/llm_service/requirements.txt
+++ b/llm_service/requirements.txt
@@ -1,7 +1,9 @@
 flask==2.3.3
 redis==4.6.0
 psycopg2-binary==2.9.7
-google-generativeai==0.3.2
 bert-score==0.3.13
-transformers==4.35.2
 python-dotenv==1.0.0
+requests==2.31.0
+# Ollama support via HTTP API - no additional packages needed
+# google-generativeai==0.3.2  # Commented out - using Ollama now
+# transformers removed to speed up build - bert-score will install minimal dependencies
