--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,14 @@ services:
       timeout: 10s
       retries: 3
 
-  # Cache Redis (sin cambios)
+  # Cache Redis con política LRU
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    volumes:
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
